# creditlens

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-ml.txt  requirements-rag.txt
.github/workflows/: ci.yml
notebooks/: 01_eda.ipynb  02_woe_iv.ipynb  03_scorecard.ipynb  04_fraud_nn.ipynb  05_rag.ipynb
src/: __init__.py  config.py
src/common/: io.py  metrics.py  tracking.py
src/data/: download.py  make_policy_corpus.py  make_synthetic.py
src/explain/: shap_codes.py
src/features/: build_features.py  spark_features.py  woe.py
src/models/: gbm.py  imbalance.py  scorecard.py  tf_net.py  torch_net.py
src/pipelines/: run_credit.py  run_fraud.py
src/rag/: eval.py  graph.py  ingest.py  llm.py  retriever.py
src/serving/: predict.py
tests/: conftest.py  test_data_schema.py  test_leakage.py  test_models.py  test_rag.py  test_woe.py
